added: api for user profile, edit, update and delete
