# storage/api-docs/api-docs.json
@@ -156,13 +156,236 @@
                     }
                 }
             }
+        },
+        "/users/settings/accounts/delete": {
+            "delete": {
+                "tags": [
+                    "users"
+                ],
+                "summary": "Delete user account",
+                "description": "Delete user account",
+                "operationId": "e17c91cb0792d71700578020d12539b7",
+                "responses": {
+                    "204": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
+        },
+        "/users/settings/accounts/update-profile": {
+            "post": {
+                "tags": [
+                    "users"
+                ],
+                "summary": "Edit a user profile",
+                "description": "Edit a user profile",
+                "operationId": "f17a9f684e5e4b3b9f52cd7ce840aacc",
+                "requestBody": {
+                    "description": "Edit a user profile",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "fullname": {
+                                        "type": "string",
+                                        "example": "justice chimobi"
+                                    },
+                                    "username": {
+                                        "type": "string",
+                                        "example": "justice-chimobi"
+                                    },
+                                    "twitter": {
+                                        "type": "string",
+                                        "example": "@justice-chimobi"
+                                    },
+                                    "avatar": {
+                                        "type": "string",
+                                        "format": "binary",
+                                        "example": "https://res.cloudinary.com/estudy/image/upload/v1705789451/yofikr4gyecw04sp5ial.jpg"
+                                    },
+                                    "gitHub": {
+                                        "type": "string",
+                                        "example": "@/chimobi-justice"
+                                    },
+                                    "website": {
+                                        "type": "string",
+                                        "example": "justice-chimobi.vercel.app"
+                                    },
+                                    "profile_headlines": {
+                                        "type": "string",
+                                        "example": "Frontend Developer || React || Typescript || laravel"
+                                    },
+                                    "bio": {
+                                        "type": "string",
+                                        "example": "shout bio about me"
+                                    },
+                                    "state": {
+                                        "type": "string",
+                                        "example": "Ebonyi"
+                                    },
+                                    "country": {
+                                        "type": "string",
+                                        "example": "Nigeria"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Profile updated successfully!",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": {
+                                    "message": "Profile updated successfully!"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated."
+                    },
+                    "422": {
+                        "description": "Unprocessable Content"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
+        },
+        "/users/settings/accounts/update-password": {
+            "post": {
+                "tags": [
+                    "users"
+                ],
+                "summary": "Update user password",
+                "description": "Update user password",
+                "operationId": "da4c8c925cc314148862d972c900bd90",
+                "requestBody": {
+                    "description": "Edit a user profile",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "current_password": {
+                                        "type": "string",
+                                        "example": "oldpassword"
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "example": "mynewpassword"
+                                    },
+                                    "password_confirmation": {
+                                        "type": "string",
+                                        "example": "mynewpassword"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Password updated successfully!",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": {
+                                    "message": "Password updated successfully!"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated."
+                    },
+                    "422": {
+                        "description": "Unprocessable Content"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
+        },
+        "/users/me": {
+            "get": {
+                "tags": [
+                    "users"
+                ],
+                "summary": "Get curently authenticated user details",
+                "description": "Get curently authenticated user details",
+                "operationId": "4d6780bc7d70ebf8811b6b19f662ed0c",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "example": {
+                                                "id": "550e8400-e29b-41d4-a716-446655440000",
+                                                "fullname": "justice chimobi",
+                                                "email": "justice@emample.com",
+                                                "twiter": "x.com/justice-chimobi",
+                                                "avatar": "https://res.cloudinary.com/estudy/image/upload/v1705789451/yofikr4gyecw04sp5ial.jpg",
+                                                "github": "github.com/justice-chimobi",
+                                                "website": "justice-chimobi.vercel.app",
+                                                "profile_headlines": "Frontend Developer || React || Typescript || laravel",
+                                                "bio": "short bio about me",
+                                                "state": "Ebonyi",
+                                                "country": "Nigeria"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unathenticated"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
         }
     },
     "components": {
         "schemas": {
             "User": {
                 "title": "User",
-                "description": "User model NB: (only mentor are allowed to add there bio & occupation fields, because bio, occupation won't be returned to student)",
+                "description": "User model",
                 "properties": {
                     "fullname": {
                         "title": "Full Name",
@@ -181,6 +404,60 @@
                         "description": "Password of the User",
                         "format": "string",
                         "example": "secret"
+                    },
+                    "username": {
+                        "title": "Username",
+                        "description": "Username of the User",
+                        "format": "string",
+                        "example": "justice-dev"
+                    },
+                    "twitter": {
+                        "title": "Twitter",
+                        "description": "twitter handle of the User",
+                        "format": "string",
+                        "example": "@justice-dev"
+                    },
+                    "avatar": {
+                        "title": "Avatar",
+                        "description": "thumbnail of the User",
+                        "format": "string",
+                        "example": "thumbnail/lorem/avatar"
+                    },
+                    "gitHub": {
+                        "title": "GitHub",
+                        "description": "GitHub of the User",
+                        "format": "string",
+                        "example": "github.com/justice-dev"
+                    },
+                    "website": {
+                        "title": "Website",
+                        "description": "Website of the User",
+                        "format": "string",
+                        "example": "https://justice-chimobi.vercel.app"
+                    },
+                    "profile_headlines": {
+                        "title": "Profile_headlines",
+                        "description": "Profile headlines of the User",
+                        "format": "string",
+                        "example": "Frontend Developer || React || Laravel"
+                    },
+                    "bio": {
+                        "title": "Bio",
+                        "description": "Bio of the User",
+                        "format": "string",
+                        "example": "about the user short bio.."
+                    },
+                    "state": {
+                        "title": "State",
+                        "description": "State of the User",
+                        "format": "string",
+                        "example": "Ebonyi"
+                    },
+                    "country": {
+                        "title": "Country",
+                        "description": "Country of the User",
+                        "format": "string",
+                        "example": "Nigeria"
                     }
                 },
                 "type": "object",
@@ -203,6 +480,10 @@
         {
             "name": "auth",
             "description": "auth"
+        },
+        {
+            "name": "users",
+            "description": "users"
         }
     ]
 }
